[package]
name = "aw-fm"
version = "0.1.0"
edition = "2024"
description = "Awused's personal gui file manager"
readme = "README.md"
license = "MIT"
keywords = ["gui", "file-manager"]
homepage = "https://github.com/awused/aw-fm"
repository = "https://github.com/awused/aw-fm"
links = "GTK4, X11"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.12"
async-channel = "2.3.1"
awconf = { git = "https://github.com/awused/awconf" }
chrono = { version = "0.4.41", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.38", features = ["derive"] }
derive_more = { version = "2.0.1", default-features = false, features = ["deref", "deref_mut", "from"] }
dirs = "6.0.0"
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color", "color"] }
futures-util = { version = "0.3.31", default-features = false }
futures-executor = { version = "0.3.31", default-features = false }
gtk = { version = "0.9.6", package = "gtk4", features = ["gnome_45"]}
hashlink = "0.10.0"
humansize = "2.1.3"
ignore = "0.4.23"
libc = "0.2.172"
log = "0.4.27"
notify = "8.0.0"
num-format = "0.4.4"
once_cell = "1.21.3"
ouroboros = "0.18.5"
path-clean = "1.0.1"
rayon = "1.10.0"
regex = "1.11.1"
rmp-serde = "1.3.0"
rusqlite = { version = "0.35.0", features = ["bundled"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27"
tokio = { version = "1.45.0", features = ["macros", "process", "rt", "sync", "time"] }
toml = "0.8.22"
unicode-normalization = "0.1.24"
uzers = "0.12.1"

# This is auto-generated, but pretty much left unmaintained and abandoned.
# Local patched version to generate what I need and expose the "v42" feature.
gnome-desktop = { git = "https://github.com/awused/gnome-desktop-rs", features = [ "v42" ] }
# gnome-desktop = { path = "../../third_party/gnome-desktop-rs/gnome-desktop", features = [ "v42" ] }

# It's this or ffmpeg
gstreamer = "0.23.6"
gstreamer-audio = "0.23.6"
gstreamer-video = "0.23.6"
gstreamer-pbutils = "0.23.5"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.18"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", features = [ "background_threads" ] }


[package.metadata.pkg-config]
gtk4 = "4.10"

[build-dependencies]
metadeps = "1.1.2"
pkg-config = "0.3.32"

[features]
debug-forced-slow = []
