[package]
name = "aw-fm"
version = "0.1.0"
edition = "2024"
description = "Awused's personal gui file manager"
readme = "README.md"
license = "MIT"
keywords = ["gui", "file-manager"]
homepage = "https://github.com/awused/aw-fm"
repository = "https://github.com/awused/aw-fm"
links = "GTK4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.12"
async-channel = "2.5.0"
awconf = { git = "https://github.com/awused/awconf" }
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6.1", features = ["derive"] }
derive_more = { version = "2.1.1", default-features = false, features = ["deref", "deref_mut", "from"] }
dirs = "6.0.0"
env_logger = { version = "0.11.10", default-features = false, features = ["auto-color", "color"] }
futures-util = { version = "0.3.32", default-features = false }
futures-executor = { version = "0.3.32", default-features = false }
gdk4-x11 = {version = "0.11.0", optional = true}
gdk4-wayland = {version = "0.11.0", optional = true}
gtk = { version = "0.11.3", package = "gtk4", features = ["gnome_45"]}
hashlink = "0.12.0"
humansize = "2.1.3"
ignore = "0.4.26"
libc = "0.2.186"
log = "0.4.32"
notify = "8.2.0"
num-format = "0.4.4"
ouroboros = "0.18.5"
path-clean = "1.0.1"
rayon = "1.12.0"
regex = "1.12.3"
rmp-serde = "1.3.1"
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = "1.0.150"
strum = "0.28.0"
strum_macros = "0.28"
tokio = { version = "1.52.3", features = ["macros", "process", "rt", "sync", "time"] }
toml = "1.1.2"
unicode-normalization = "0.1.25"
uzers = "0.12.2"
x11 = {version = "2.21.0", default-features = false, features = ["xlib"], optional = true}

# This is auto-generated, but pretty much left unmaintained and abandoned.
# Local patched version to generate what I need and expose the "v42" feature.
gnome-desktop = { git = "https://github.com/awused/gnome-desktop-rs", features = [ "v42" ] }
# gnome-desktop = { path = "../../third_party/gnome-desktop-rs/gnome-desktop", features = [ "v42" ] }

# It's this or ffmpeg
gstreamer = "0.25.2"
gstreamer-audio = "0.25.2"
gstreamer-video = "0.25.2"
gstreamer-pbutils = "0.25.2"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.4.4"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.7.0", features = [ "background_threads" ] }


[package.metadata.pkg-config]
gtk4 = "4.10"

[build-dependencies]
metadeps = "1.1.2"
pkg-config = "0.3.33"

[features]
default = ["wayland", "x11"]
debug-forced-slow = []
x11 = ["dep:x11", "dep:gdk4-x11"]
wayland = ["dep:gdk4-wayland"]

[workspace]
members = ["xdg-desktop-portal-aw-fm"]
